<resources>
    <string name="app_name" translatable="false">Giftme</string>
    <string name="admin_email" translatable="false">hanzlpavel77@gmail.com</string>
    <string name="login_title">Login</string>
    <string name="login_username">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_login_btn">Login Now</string>
    <string name="login_signup_btn">Signup</string>
    <string name="login_forgot_pass">Forgot password?</string>
    <string name="login_failed">Login failed! Try it one more time…</string>
    <string name="login_successful">Login was successful.</string>
    <string name="signup_title">Signup</string>
    <string name="signup_confirm_pass">Confirm password</string>
    <string name="signup_email">Your e-mail</string>
    <string name="signup_back_btn">Back</string>
    <string name="signup_create_account_btn">Create Account</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="account_created">Account created.</string>
    <string name="error_invalid_password">Passwords do not match or password is not min. 6 characters long or doesn\'t contain uppercase and lowercase letter!</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_invalid_email">Invalid e-mail!</string>
    <string name="giftlist">Giftlist</string>
    <string name="groups">Your groups</string>
    <string name="stats">Stats</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="loged_in_as">Logged in as:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_name_save">Save</string>
    <string name="card_name_budget_title">Budget: </string>
    <string name="activity_newname_name">Name of your relative or friend</string>
    <string name="activity_newname_budget">Your budget on him/her?</string>
    <string name="activity_newname_unfilled_fields">Please fill in empty fields.</string>
    <string name="activity_newname_name_added">Name added.</string>
    <string name="activity_newname_add_new_name">Add new name</string>
    <string name="giftlist_title">Giftlist</string>
    <string name="giftlist_gift_heading">Gift</string>
    <string name="giftlist_bought_heading">Bought</string>
    <string name="card_giftDefault_price">Price:</string>
    <string name="archive_title">Archive</string>
    <string name="activity_newgift_name">Enter name of a gift</string>
    <string name="activity_newgift_budget">Enter price of the gift</string>
    <string name="activity_newgift_gift_added">Gift added.</string>
    <string name="activity_newgift_add_new_name">Add new gift</string>
    <string name="checkbox_isBought_true_toast">Gift is setted as bought.</string>
    <string name="checkbox_isBought_false_toast">Gift is setted as unbought.</string>
    <string name="swipe_archived">Archived</string>
    <string name="swipe_unarchived">Unarchived</string>
    <string name="swipe_deleted">Deleted</string>
    <string name="eventIsActiveTitle">Merry Christmas!</string>
    <string name="eventIsNotActiveTitle">Days until Christmas:</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="value_of_gifts">Value of gifts:</string>
    <string name="value_of_all_gifts_pie_chart_label">Value of all gifts:</string>
    <string name="count_of_gifts">Count of gifts:</string>
    <string name="count_of_all_gifts_pie_chart_label">Count of all gifts:</string>
    <string name="budgetsInfo">Aren\'t you spending too much?</string>
    <string name="stats_number_of_persons">Number of persons:</string>
    <string name="stats_sum_of_all_persons_budgets">Sum of all persons budgets:</string>
    <string name="stats_value_of_bought_gifts">Value of bought gifts:</string>
    <string name="stats_count_of_all_gifts">Count of all gifts:</string>
    <string name="stats_count_of_unbought_gifts">Count of unbought gifts:</string>
    <string name="stats_count_of_bought_gifts">Count of bought gifts:</string>
    <string name="stats_value_of_all_gifts">Value of all gifts:</string>
    <string name="stats_value_of_unbought_gifts">Value of unbought gifts:</string>
    <string name="social_my_wish_list">My wish list</string>
    <string name="social_name">Name</string>
    <string name="card_social_added_user_email">E-mail:</string>
    <string name="Activity_newAddedUser_nickname">Set nickname for him/her</string>
    <string name="Activity_newAddedUser_email">E-mail of your friend or relative</string>
    <string name="activity_newaddeduser_your_email_error">You can not enter your own e-mail.</string>
    <string name="my_wish_list_gifttip_heading">Gift tips for me</string>
    <string name="my_wish_list_title">My wish list</string>
    <string name="activity_newowngifttip_add_new_gifttip">Add new gift tip</string>
    <string name="activity_new_own_gifttip_name_added">Gift tip added.</string>
    <string name="gifttips_title">Gift tips</string>
    <string name="gifttips_gifttip_heading">Gift tips</string>
    <string name="gifttips_booked_by_you_heading">Booked by you</string>
    <string name="friends">Friends</string>
    <string name="wishlist">My wishlist</string>
    <string name="tab_layout_has_on_wishlist">Has on wishlist</string>
    <string name="others_suggest">Others suggesting</string>
    <string name="checkbox_isBookedByYou_true_toast">Booked</string>
    <string name="checkbox_isBookedByYou_false_toast">Unbooked.</string>
    <string name="card_others_gift_tip_public_tipBy">Tip by:</string>
    <string name="card_my_gift_tip_tip_public_bookedBy">Booked by:</string>
    <string name="swipe_deleted_undo">UNDO</string>
    <string name="snackbar_restored">Restored.</string>
    <string name="swipe_deleted_for_all">Deleted for all other users.</string>
    <string name="frag_others_gifttips_alert_title">Delete for all users?</string>
    <string name="frag_others_gifttips_alert_message">This action will delete this gifttip not only for you, but for all other users of Giftme app. Do still want to delete it?</string>
    <string name="frag_others_gifttips_alert_button_no">NO</string>
    <string name="frag_others_gifttips_alert_button_yes">YES</string>
    <string name="activity_main_logout_title">Logout</string>
    <string name="activity_main_logout_message">Do you wish to logout?</string>
    <string name="activity_newname_edit_name">Edit name</string>
    <string name="activity_newname_name_edited">Name edited.</string>
    <string name="activity_settings_title">Settings</string>
    <string name="settings_stats_ideal_overall_budget">Ideal overall budget:</string>
    <string name="settings_stats_ideal_overall_budget_edittext">Enter ideal value</string>
    <string name="settings_send_feedback_title">Send Feedback:</string>
    <string name="settings_feedback">feedback</string>
    <string name="settings_feedback_email_message">Giftme, I would like to tell you my feedback about...</string>
    <string name="settings_category_title_account_settings">Account settings</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_change_password_summary">Click to change your account password</string>
    <string name="settings_category_tittle_other">Other</string>
    <string name="settings_send_feedback">Send feedback</string>
    <string name="settings_send_feedback_summary">Report technical issues or suggest new features</string>
    <string name="taptarget_giftlist_archive_title">Welcome to archive</string>
    <string name="taptarget_giftlist_archive_desription">Here you can find gifts, that you didn\'t want to see in your regular giftlist anymore.  \n\n It\'s perfect place for gifts, that you already bought in past, want to remember them, but don\'t want to mix them with gifts that you are planning to buy.  \n\nTip: \n &#128073; Swipe item right to unarchive \n &#128072; or swipe left to delete.</string>
    <string name="taptarget_persons_giftlist_addbutton_title">Giftlist of</string>
    <string name="taptarget_persons_giftlist_addbutton_desription">Congratulations! You created your first giftlist. \n\n You can add gifts to this giftlist using highlighted button. \n\n Tip: After you create an item, you can either \n &#128073; Swipe right to archive item \n &#128072; or swipe left to delete item.</string>
    <string name="taptarget_persons_giftlist_archivebutton_title">Stay organized</string>
    <string name="taptarget_persons_giftlist_archivebutton_desription">"When you don't want to have a mess in this giftlist, you can always move old - bought gifts from current giftlist to person's archive, so in future you know what you gave to this person in past, but also keep order in what you are planing to give him or her in future. \n\n To put it simply, archive is a place for gifts that was already given. &#128522; "</string>
    <string name="taptarget_giftlist_title">Welcome to Giftme &#128587;</string>
    <string name="taptarget_giftlist_description">There\'s nothing here yet. Change it. \n\nThis is screen where your giftlists are located. You can add your friend or relative by clicking on button in the bottom right corner. \nTry it.</string>
    <string name="taptarget_wishlist_title">Place of your wishes </string>
    <string name="taptarget_wishlist_description">This is place, where you can store your wishes. As a bonus other users, who add you as a friend, will see your wishlist, so maybe your dreams will come true.\nTo make it fair, you will see theirs wishlists, if you add them as a friends.  \n\nTip:\n&#128072; Swipe item left to delete it. Not just for you, but for all users of Giftme app.</string>
    <string name="taptarget_social_title">Get some gift tips! &#127873;</string>
    <string name="taptarget_social_description">Add friends and see what they have on their wish lists. Gift tips right from those, whom you want to give a present. Isn\'t it perfect? You can book that gift tip and let other users of Giftme app know, that you are going to buy that gift, so they don\'t need to buy it too.\n\nYou can also give a tip to other users, if you know about something, what your friend would like to get. And don\'t worry, he or she will not see it, it will stay as a public secret.</string>
    <string name="taptarget_gifttips_title">Great, your first friend. </string>
    <string name="taptarget_gifttips_description">Let\'s see, what is on his or her wish list. If it is empty, you can always try to switch tabs a see if there are some gift tips by other users. \n\nOn second tab you can also add your own gift tips for this particular friend to help others.</string>
    <string name="activity_newaddeduser_user_found">User found and added to your friends.</string>
    <string name="activity_newaddeduser_user_does_not_exists">User does not exists!</string>
    <string name="activity_newaddeduser_error">Error:</string>
    <string name="stats_bought">Bought</string>
    <string name="stats_unbought">Unbought</string>
    <string name="settings_changepass_pass_do_not_match">New passwords do not match. Please enter them again.</string>
    <string name="settings_changepass_failed">Changing password failed.</string>
    <string name="settings_changepass_sucessfull">Changing password was successful.</string>
    <string name="settings_changepass_1_enter_your_old_password">1. Enter your old password</string>
    <string name="settings_changepass_2_enter_your_new_password">2. Enter your new password</string>
    <string name="settings_changepass_3_confirm_your_new_password">3. Confirm your new password</string>
</resources>