<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory android:title="@string/settings_category_title_account_settings">
            <Preference android:title="@string/settings_change_password"
                android:key="settings_preferences_change_password_button"
                android:summary="@string/settings_change_password_summary"
                />
        </PreferenceCategory>


        <PreferenceCategory android:title="@string/settings_category_tittle_other">
            <Preference
                android:key="settings_preferences_send_feedback"
                android:title="@string/settings_send_feedback"
                android:summary="@string/settings_send_feedback_summary" />
        </PreferenceCategory>

</PreferenceScreen>