<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_giftlist"
            android:icon="@drawable/ic_giftlist"
            android:title="@string/giftlist"/>
        <item android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/groups"/>
        <item android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats"
            android:title="@string/stats"/>
    </group>

    <item android:title="@string/other">
         <menu>
             <item android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_settings"
                 android:title="@string/settings"/>
             <item android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_logout"
                 android:title="@string/logout"/>
         </menu>
    </item>

</menu>