<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".giftlist.ActivityNewName">


    <EditText
        android:id="@+id/activity_settings_change_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_changepass_1_enter_your_old_password"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/activity_settings_change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_changepass_2_enter_your_new_password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/activity_settings_change_password_new_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_changepass_3_confirm_your_new_password"
        android:inputType="textPassword"
        />







</LinearLayout>