<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_background"
    tools:context=".Activity_Login">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_login_fields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-medium"
            android:text="@string/login_title"
            android:textColor="@color/white80transparent"
            android:textSize="25sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_username"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/button_login_now"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_background"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/login_login_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_login_fields" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/transparent"
            android:text="@string/login_signup_btn"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


</android.support.constraint.ConstraintLayout>